# gyrus

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  diagram_editable.xml
examples/less-simple-example/: main.rs
examples/noughts-and-crosses-random-train/: main.rs
examples/simple-example/: main.rs
readme_imgs/: diagram_source.txt
src/: breed.rs  gene.rs  generation.rs  lib.rs  mutate.rs  new_genes.rs  tests.rs  validate.rs
src/gene/: breed.rs  key.rs  mutate.rs  new.rs  output.rs  validate.rs
src/generation/: creature.rs  kill.rs  new.rs  prints.rs  resort_species.rs  score.rs  sort.rs  species.rs  update.rs  validate.rs
src/generation/creature/gene/: key.rs  new.rs
src/generation/gene/: breed.rs
src/generation/species/: creature.rs
src/generation/species/creature/: gene.rs
src/generation/species/creature/gene/: breed.rs  key.rs  mutate.rs  new.rs  output.rs  validate.rs
