[package]
name = "gyrus"
version = "0.0.4"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/efunb/noughts-and-crosses-ai-collection"
homepage = "http://efunb.com/"
description = """
Gyrus is a new tool for creating machine learning that runs blazingly fast when learning has finished.
"""
edition = '2018'

[dependencies]
chrono = "0.4"
rand = "0.5"
rayon = "1.0.2"

[dev-dependencies]
noughts_and_crosses_lib = "0"
dont_disappear = "2"